--- a/.github/workflows/preview-dev.yml
+++ b/.github/workflows/preview-dev.yml
@@ -1,4 +1,4 @@
-name: Preview
+name: Preview Dev
 
 on:
     pull_request:
@@ -40,4 +40,6 @@ jobs:
               run: |
                   pnpm install
                   pulumi login file://./.pulumi
-                  pulumi preview --diff > ./previews/preview.diff
+                  export PULUMI_CONFIG_PASSPHRASE_FILE="./.secrets/dev.txt"
+                  pulumi preview > ./preview.simple.diff
+                  pulumi preview --diff > ./preview.diff
