--- a/.github/workflows/preview-dev.yml
+++ b/.github/workflows/preview-dev.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: "casual-simulation/casualos"
-          ref: "master"
+          ref: "feature/infra"
           path: casualos
           fetch-depth: 20
           fetch-tags: true
@@ -37,6 +37,7 @@ jobs:
           npm run build
         env:
           CI: true
+          SERVER_CONFIG_FILE: ../infra/build-config/server-config.dev.json
       - uses: pulumi/actions@v5
       - name: preview infrastructure
         working-directory: infra
