--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -2,6 +2,12 @@ name: Deploy Dev
 
 on:
   workflow_dispatch:
+    inputs:
+      ref:
+        type: string
+        default: 'feature/infra'
+        required: false
+        description: 'The CasualOS repo ref that should be deployed.'
 
 jobs:
   preview:
@@ -15,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: "casual-simulation/casualos"
-          ref: "feature/infra"
+          ref: ${{ inputs.ref }}
           path: casualos
           fetch-depth: 250
           fetch-tags: true
@@ -34,7 +40,7 @@ jobs:
           npm run build
         env:
           CI: true
-          SERVER_CONFIG_FILE: ../infra/build-config/server-config.dev.json
+          SERVER_CONFIG_FILE: '${{ github.workspace }}/infra/build-config/server-config.dev.json'
       - uses: pulumi/actions@v5
       - name: deploy infrastructure
         working-directory: infra
@@ -43,7 +49,6 @@ jobs:
           pwd
           pulumi login file://.
           pulumi stack select dev
-          export PULUMI_CONFIG_PASSPHRASE_FILE="./.secrets/dev.txt"
           pulumi up --yes
 
           git config user.name "github-actions[bot]"
@@ -51,3 +56,5 @@ jobs:
           git add .
           git commit -m "Updated dev stack"
           git push
+        env:
+          PULUMI_CONFIG_PASSPHRASE_FILE: '${{ github.workspace }}/infra/.secrets/dev.txt'
